# NCAAM

./: .gitignore  AGENTS.md  README.md  SHA256SUMS.txt  SIZES.txt  TeamHistories.csv  diag.html  games.html  index.html  package.json  player.html  players.html  pnpm-lock.yaml  pyproject.toml  rankings.html  requirements-dev.txt  standings.html  team.html  teams.html  tsconfig.json  vite.config.ts
cloudflare/: worker.js  wrangler.toml
data/: nba_birthplaces.csv  nba_draft_birthplaces.csv  sample_player_stats.json
docs/: bdl.md  boxscore.md
examples/: bar-basic.ts  line-basic.ts
public/: 404.html  Basketball Home Locations.xlsx  about.html  diag.html  fun-lab.html  game-preview.html  game-tracker.html  game.html  games.html  goat.html  history.html  index.html  insights.html  player.html  players.html  rankings.html  rewind.html  robots.txt  sitemap.xml  standings.html  styles.css  team.html  teams.html  venue_grouping_report.csv
scripts/: __init__.py  build-cbb-summary.mjs  build-ncaa-logo-map.mjs  build-players.js  build_insights.py  build_player_profiles.py  build_players_index.ts  build_schedule_snapshot.mjs  build_site.py  build_sitemap.mjs  build_snapshot.mjs  build_team_profiles.py  check-build-imports.mjs  ensure-ncaa-logos.mjs  fetch-espn-ncaa-logo-metadata.mjs  fetch_injuries.ts  fetch_rosters.ts  fetch_schedule_from_bref.py  finalize-hash.js  generate_goat_birth_index.py  generate_player_stat_leaderboards.py  goat_metrics.py  health-ncaam.mjs  phase1_pipeline.py  prewarm_bdl.ts  validate_rosters.ts
src/: fun-lab.ts  game.ts  games.ts  players.ts  (+2 more)
(+4721 files in other folders)
